# grammar-python-antlr

./: .gitignore  AUTHORS  ChangeLog  Pipfile  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
pyshexc/parser/: ShExDocLexer.py  ShExDocParser.py  ShExDocVisitor.py
pyshexc/parser_impl/: generate_shexj.py
scripts/: genpython.sh
tests/: __init__.py  test_basic_parser.py  test_issue_9.py  test_rdflib_parser_issue.py  test_shexr.py  test_spanning_pnchars_shex.py
