[metadata]
name = PyShExC
url = https://github.com/shexSpec/grammar-python-antlr
license = MIT License
author = Harold Solbrig
author_email = informatics@solbrigs.us
summary = PyShExC - Python ShEx compiler
python-requires = >=3.7
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development :: Compilers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords =
    shex
    shexc
    shexj
    shexr
    rdf

[files]
packages =
    pyshexc

[bdist_wheel]
universal = 1
